[package]
name = "kitsune"
authors = ["Jochem Pouwels"]
description = "A retained-mode UI library in rust"
keywords = ["UI", "graphics"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph = "0.2.21"
bytemuck = { version = "1.14.0", features = ["derive"] }
paste = "1.0.14"
tokio = { version = "1.32.0", features = ["full"] }
wgpu = "0.17.0"
winit = "0.28.6"
