[package]
name = "kitsune_ui"
authors = ["HummingPhoenix <jjpouwels2004@gmail.com>"]
description = "A retained-mode UI library in rust"
keywords = ["UI", "graphics"]
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph = { version = "0.2.21", optional = true }
bytemuck = { version = "1.14.0", features = ["derive"] }
itertools = "0.11.0"
paste = "1.0.14"
thiserror = "1.0.48"
wgpu = "0.17.0"
winit = { version = "0.28.6", optional = true }

[dev-dependencies]
tokio = { version = "1.32.0", features = ["full"] }

[features]
default = ["window", "text"]
window = ["dep:winit"]
text = ["dep:ab_glyph"]
